--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,7 @@
 	<modules>
 		<module>engine</module>
 		<module>benchmark</module>
-		<module>visualisation</module>
-		<module>benchmark</module>
+		<module>visualizer</module>
 	</modules>
 	<packaging>pom</packaging>
 	
@@ -130,21 +129,6 @@
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit.vintage.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-core</artifactId>
-			<version>1.19</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>1.19</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
-			<artifactId>engine</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
