--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>fr.uca.unice.polytech.si3.ps5.year17.Main</mainClass>
+					<mainClass>fr.uca.unice.polytech.si3.ps5.year17.engine.Main</mainClass>
 					<arguments>
 						<argument>nani</argument>
 					</arguments>
