--- a/visualizer/pom.xml
+++ b/visualizer/pom.xml
@@ -17,5 +17,12 @@
         <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
+	<dependencies>
+		<dependency>
+			<groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+			<artifactId>engine</artifactId>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
 
 </project>
