--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>teamB</artifactId>
-        <groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+        <groupId>fr.uca.unice.polytech.si3.ps5.year17.teamB</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -26,7 +26,7 @@
         </dependency>
 
         <dependency>
-            <groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+            <groupId>fr.uca.unice.polytech.si3.ps5.year17.teamB</groupId>
             <artifactId>engine</artifactId>
             <version>1.0</version>
         </dependency>
@@ -121,6 +121,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
