--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>teamB</artifactId>
-        <groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+        <groupId>fr.uca.unice.polytech.si3.ps5.year17.teamB</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
