--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
 	-->
 	
-	<groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+	<groupId>fr.uca.unice.polytech.si3.ps5.year17.teamB</groupId>
 	<artifactId>teamB</artifactId>
 	<version>1.0</version>
 	<modules>
@@ -74,7 +74,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>fr.uca.unice.polytech.si3.ps5.year17.engine.Main</mainClass>
+					<mainClass>fr.uca.unice.polytech.si3.ps5.year17.teamB.engine.Main</mainClass>
 					<arguments>
 						<argument>nani</argument>
 					</arguments>
