--- a/visualizer/pom.xml
+++ b/visualizer/pom.xml
@@ -15,11 +15,10 @@
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
-        <testSourceDirectory>src/test/java</testSourceDirectory>
     </build>
 	<dependencies>
 		<dependency>
-			<groupId>fr.uca.unice.polytech.si3.ps5.year17</groupId>
+			<groupId>fr.uca.unice.polytech.si3.ps5.year17.teamB</groupId>
 			<artifactId>engine</artifactId>
 			<version>1.0</version>
 		</dependency>
