fix getStrategyById and resources problem

--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -23,4 +23,12 @@
         </resources>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+    </dependencies>
+
 </project>
